@@ -1,3 +1,4 @@
+.DS_Store
 config.mk*
 FASP.mk*
 *.ex
